[package]
name="atlas-data"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = {workspace=true}
atlas-core = {workspace=true}
crossbeam = {version="0.8.4"}
log.workspace = true
tokio={workspace=true}
serde = {workspace=true}
serde_json={workspace=true}
solana-sdk={workspace=true}
reqwest={workspace=true}
tokio-tungstenite={workspace=true}
futures-util = "0.3.31"
dashmap = "6.1.0"
