[package]
name="atlas-sol2"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = {workspace=true}
atlas-core = {workspace=true}
agave-geyser-plugin-interface = "2.1.4"
crossbeam = {version="0.8.4"}
log.workspace = true
tokio={workspace=true}
serde = {workspace=true}
serde_json={workspace=true}
solana-sdk={workspace=true}
spl-token = "7.0.0"
solana-client = "2.1.5"
tokio-tungstenite ={ version = "0.24.0", features = ["native-tls"] }
futures = "0.3.31"
chrono.workspace = true
solana-transaction-status-client-types = "2.1.5"
